# nexus-enterprise

./: #2 - Start Cloud SQL proxy (if not already running).rtf  #2DEV Ser SU - Second terminal.rtf  #3 - Start API dev manually with the real password.rtf  #4 - Start web dev.rtf  #5 - Verify health and login.rtf  .dockerignore  .easignore  .env.shadow.example  .gcloudignore  .gitignore  .npmrc  .vercelignore  1500SF-BOM-PETL-Import.csv  Clean Startup testing for GCP Cloud Proxy Dev.rtf  Dockerfile  NEAT NODE STACK iTERM WINDOWS (12:5:2025).iterm2arrangement  NEAT_SU_PANE_STACK (12:5:2025).iterm2arrangement  NEXUS Bulk Users Import.csv  POSTGRESS USER AND PWD.rtf  Procedure for startup Nexus enterprise.rtf  README.md  SMARTY ADDRESS CONFIG.rtf  Start DEV STACK.rtf  TEXT FOR docker-compose.yml - 20251224.rtf  Untitled 3.rtf  Verify STACK ALL GREEN - enter in any terminal.rtf  WARP.md  app.json  cloudbuild-worker.yaml  cloudbuild.yaml  cors.json  debug-db-url.js  deploy-api-prod.sh  nexus.code-workspace  package-lock.json  package.json  start-dev copy.command  start-dev-clear_ALL.sh  start-dev.sh  start-mobile-expo.sh  (+6 more)
apps/nexbridge-connect/src-tauri/: Cargo.toml  photogrammetry_helper-aarch64-apple-darwin  photogrammetry_helper-universal-apple-darwin  photogrammetry_helper-x86_64-apple-darwin  target  tauri.conf.json
apps/nexbridge-connect/src-tauri/capabilities/: default.json
apps/nexbridge-connect/src-tauri/helpers/: photogrammetry_helper_stub.swift
apps/nexbridge-connect/src-tauri/helpers/photogrammetry_helper/: Package.swift
apps/nexbridge-connect/src-tauri/helpers/photogrammetry_helper/.build/: build.db  plugin-tools.yaml
apps/nexbridge-connect/src-tauri/helpers/photogrammetry_helper/.build/arm64-apple-macosx/release/: description.json  photogrammetry_helper
apps/nexbridge-connect/src-tauri/helpers/photogrammetry_helper/.build/arm64-apple-macosx/release/ModuleCache/: CoreMotion-3POZMG51BIQ9T.swiftmodule  GameController-81PHULS8B26Q.swiftmodule  GroupActivities-2PLMNZBI43Q8N.swiftmodule  RealityFoundation-2PH7BS35ES3HT.swiftmodule  RealityKit-2KEI7YTAW6C08.swiftmodule
apps/nexbridge-connect/src-tauri/helpers/photogrammetry_helper/.build/arm64-apple-macosx/release/ModuleCache/3K4UM11YJVT2W/: AVFAudio-MFFJ6HCE9A7Z.pcm  Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  AudioToolbox-3FX4B654ICQE2.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  Carbon-3FMY3B0T5SZYU.pcm  CloudKit-1WXE7QS1BFRPN.pcm  Cocoa-1MK6YYY84V08M.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreAudio-J9DSWC1670R6.pcm  CoreAudioTypes-11649WXSRCA0E.pcm  CoreData-1KHK1L2CYC2N6.pcm  MachO-20RPYVQSX341K.pcm  (+61 more)
apps/nexbridge-connect/src-tauri/helpers/photogrammetry_helper/.build/arm64-apple-macosx/release/Modules/: photogrammetry_helper.swiftdoc  photogrammetry_helper.swiftmodule  photogrammetry_helper.swiftsourceinfo
apps/nexbridge-connect/src-tauri/helpers/photogrammetry_helper/.build/arm64-apple-macosx/release/photogrammetry_helper.build/: output-file-map.json  photogrammetry_helper.d  sources
apps/nexbridge-connect/src-tauri/helpers/photogrammetry_helper/.build/arm64-apple-macosx/release/photogrammetry_helper.product/: Objects.LinkFileList
apps/nexbridge-connect/src-tauri/helpers/photogrammetry_helper/Sources/: main.swift
apps/nexbridge-connect/src-tauri/icons/: icon.icns
apps/nexbridge-connect/src-tauri/scripts/: analyze_mesh.py  sketchup_import.rb
apps/nexbridge-connect/src-tauri/src/: contacts.rs  input.rs  keep_alive.rs  lib.rs  mail_index.rs  main.rs  precision_scan.rs  system_info.rs  tray.rs  uploader.rs  video.rs
apps/nexus-applet/src-tauri/: Cargo.toml
apps/nexus-applet/src-tauri/icons/: icon.icns
apps/nexus-applet/src-tauri/src/: contact_groups.rs  contacts_macos.swift  converter.rs  documents.rs  index.rs  lib.rs  uploader.rs
archive/contact-sync/src-tauri/: Cargo.toml  contacts_helper  tauri.conf.json
archive/contact-sync/src-tauri/src/: lib.rs
(+1756 files in other folders)
