[package]
name = "nexus-applet"
version = "1.0.0"
description = "Nexus Utilities App - Contact Sync & Document Management"
authors = ["Nexus"]
edition = "2021"

[lib]
name = "nexus_applet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

# Document scanning & indexing
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"

# Document conversion (skinny docs)
docx-rs = "0.4"
pdf-extract = "0.7"
pulldown-cmark = "0.10"
base64 = "0.21"
image = { version = "0.24", default-features = false, features = ["jpeg", "png", "gif"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

# Mail indexing
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
