[package]
name = "nexus-contact-sync"
version = "1.0.0"
description = "Nexus Contact Sync Desktop App"
authors = ["Nexus"]
edition = "2021"

[lib]
name = "nexus_contact_sync_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
